# AdventOfCode

./: Cargo.toml  README.md  template.rs
.github/workflows/: clippy.yml
2015/: Cargo.toml
2015/day_01/: solve1.rs  solve2.rs
2015/day_02/: solve1.rs  solve2.rs
2015/day_03/: solve1.rs  solve2.rs
2015/day_04/: solve1.rs  solve2.rs
2015/day_05/: solve1.rs  solve2.rs
2015/day_06/: solve1.rs  solve2.rs
2015/day_07/: solve1.rs  solve2.rs
2015/day_08/: solve1.rs  solve2.rs
2015/day_09/: solve1.rs  solve2.rs
2015/day_10/: solve1.rs  solve2.rs
2015/day_11/: solve1.rs  solve2.rs
2015/day_12/: solve1.rs  solve2.rs
2015/day_13/: solve1.rs  solve2.rs
2015/day_14/: solve1.rs  solve2.rs
