[package]
name = "AoC2015"
version = "0.0.1"

[profile.dev]
opt-level = 3

[dependencies]
md5 = "0.7.0"

[[bin]]
name = "2015-01-1"
path = "day_01/solve1.rs"

[[bin]]
name = "2015-01-2"
path = "day_01/solve2.rs"

[[bin]]
name = "2015-02-1"
path = "day_02/solve1.rs"

[[bin]]
name = "2015-02-2"
path = "day_02/solve2.rs"


