[package]
name = "AoC2015"
version = "0.0.1"

[dependencies]
md5 = "0.7.0"
regex = "1.5"
itertools = "0.8"
serde_json = "1.0"

[[bin]]
name = "2015-01-1"
path = "day_01/solve1.rs"

[[bin]]
name = "2015-01-2"
path = "day_01/solve2.rs"

[[bin]]
name = "2015-02-1"
path = "day_02/solve1.rs"

[[bin]]
name = "2015-02-2"
path = "day_02/solve2.rs"

[[bin]]
name = "2015-03-1"
path = "day_03/solve1.rs"

[[bin]]
name = "2015-03-2"
path = "day_03/solve2.rs"

[[bin]]
name = "2015-04-1"
path = "day_04/solve1.rs"

[[bin]]
name = "2015-04-2"
path = "day_04/solve2.rs"

[[bin]]
name = "2015-05-1"
path = "day_05/solve1.rs"

[[bin]]
name = "2015-05-2"
path = "day_05/solve2.rs"

[[bin]]
name = "2015-06-1"
path = "day_06/solve1.rs"

[[bin]]
name = "2015-06-2"
path = "day_06/solve2.rs"

[[bin]]
name = "2015-07-1"
path = "day_07/solve1.rs"

[[bin]]
name = "2015-07-2"
path = "day_07/solve2.rs"

[[bin]]
name = "2015-08-1"
path = "day_08/solve1.rs"

[[bin]]
name = "2015-08-2"
path = "day_08/solve2.rs"

[[bin]]
name = "2015-09-1"
path = "day_09/solve1.rs"

[[bin]]
name = "2015-09-2"
path = "day_09/solve2.rs"

[[bin]]
name = "2015-10-1"
path = "day_10/solve1.rs"

[[bin]]
name = "2015-10-2"
path = "day_10/solve2.rs"

[[bin]]
name = "2015-11-1"
path = "day_11/solve1.rs"

[[bin]]
name = "2015-11-2"
path = "day_11/solve2.rs"

[[bin]]
name = "2015-12-1"
path = "day_12/solve1.rs"

[[bin]]
name = "2015-12-2"
path = "day_12/solve2.rs"

